bigquery/test/corpus/bq_ddl.txt
================================================================================
CREATE TABLE with OPTIONS
================================================================================

CREATE TABLE t (id INT64) OPTIONS (description = 'my table');

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (keyword_int64)))
      (bq_options_clause
        (keyword_options)
        key: (identifier)
        value: (literal)))))

================================================================================
CREATE VIEW with OPTIONS
================================================================================

CREATE VIEW v OPTIONS (expiration_timestamp = TIMESTAMP '2025-01-01') AS SELECT 1;

--------------------------------------------------------------------------------

(program
  (statement
    (create_view
      (keyword_create)
      (keyword_view)
      (object_reference
        name: (identifier))
      (bq_options_clause
        (keyword_options)
        key: (identifier)
        value: (bq_typed_literal
          (timestamp
            (keyword_timestamp))
          (literal)))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              value: (literal))))))))

================================================================================
EXPORT DATA with OPTIONS
================================================================================

EXPORT DATA OPTIONS (uri = 'gs://bucket/*.csv', format = 'CSV') AS SELECT * FROM t;

--------------------------------------------------------------------------------

(program
  (statement
    (bq_export_data
      (keyword_export)
      (keyword_data)
      (bq_options_clause
        (keyword_options)
        key: (identifier)
        value: (literal)
        key: (identifier)
        value: (literal))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              value: (all_fields))))
        (from
          (keyword_from)
          (relation
            (object_reference
              name: (identifier))))))))

================================================================================
ASSERT with message
================================================================================

ASSERT (SELECT COUNT(*) FROM t) > 0 AS 'Table must not be empty';

--------------------------------------------------------------------------------

(program
  (statement
    (bq_assert
      (keyword_assert)
      condition: (binary_expression
        left: (subquery
          (select
            (keyword_select)
            (select_expression
              (term
                value: (invocation
                  (object_reference
                    name: (identifier))
                  parameter: (term
                    value: (all_fields))))))
          (from
            (keyword_from)
            (relation
              (object_reference
                name: (identifier)))))
        right: (literal))
      (keyword_as)
      (literal))))
